@@ -42,6 +42,7 @@ Included
 - ZIP structure + relationships are inspected deterministically for macro/embed/external-link indicators.
 - Document strict route now fails closed on partial OOXML ZIP metadata even when structural markers are present, preventing mixed valid/corrupt office-document acceptance.
 - Document strict route now requires both PDF header and EOF marker evidence for explicit `.pdf` analysis, preventing header-only placeholder inputs from passing strict document routing.
+- Document strict route now requires minimum CHM structural header evidence (including header-length sanity) for explicit `.chm` analysis, preventing tiny header-only placeholders from passing strict document routing.
 - IaC/CI adapter extraction deepened:
 - Deterministic action reference parsing now distinguishes pinned commit/digest refs from unpinned refs.
 - Remote module/source indicators and external runner signals are counted with structured counters in adapter summary output.
